@@ -1310,6 +1310,8 @@ class AppearancePanel(wx.Panel, PreferencesPanelBase):
         font = evt.GetValue()
         if isinstance(font, wx.Font) and not font.IsNull():
             Profile_Set('FONT3', font, 'font')
+            # TODO: this callback is no longer necessary due to the
+            #       profile notifier callbacks.
             ed_msg.PostMessage(ed_msg.EDMSG_DSP_FONT, font)
 
     @staticmethod
